tests/fixtures/valid/bytes/bytes_comparison.py
# Bytes comparison operations
a: bytes = b"hello"
b: bytes = b"hello"
c: bytes = b"world"

print(a == b)
print(a == c)
print(a != c)
print(a != b)
