tests/fixtures/invalid/pow_bytes_none_int.py
# Cannot call pow() with Bytes, None, Int
x = pow(b"hello", None, 1)
